Works-Slider: added fancybox

--- a/src/blocks/modules/works/works.html
+++ b/src/blocks/modules/works/works.html
@@ -31,25 +31,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-1.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-1.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-1.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-1.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-1.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-1.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-1.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-1.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
@@ -90,25 +90,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-2.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-2.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-2.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-2.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-2.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-2.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-2.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-2.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
@@ -149,25 +149,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-3.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-3.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-3.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-3.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-3.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-3.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-3.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-3.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
@@ -208,25 +208,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-4.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-4.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-4.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-4.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-4.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-4.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-4.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-4.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
@@ -267,25 +267,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-5.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-5.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-5.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-5.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-5.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-5.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-5.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-5.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
@@ -326,25 +326,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-6.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-6.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-6.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-6.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-6.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-6.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-6.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-6.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
@@ -385,25 +385,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-7.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-7.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-7.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-7.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-7.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-7.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-7.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-7.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
@@ -444,25 +444,25 @@
 
                 <div class="works-slider row">
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-8.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-8.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-8.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-8.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/before-8.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/before-8.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">До лечения</span>
                         </a>
                     </div>
                     <div class="col-xl-6">
-                        <a href="#" class="works-slider__item">
+                        <a data-fancybox href="../../../img/clinic/works/after-8.jpg" class="works-slider__item">
                             <img src="../../../img/clinic/works/after-8.jpg" alt="">
                             <span class="works-slider__item_overflow overflow-blue color-white">После лечения</span>
                         </a>
