Cards: reworked style

--- a/src/blocks/modules/home-6/home-6.html
+++ b/src/blocks/modules/home-6/home-6.html
@@ -8,7 +8,7 @@
 
         <div class="row cards__slider">
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-2 cards__top">
                     <div class="cards__img">
@@ -26,7 +26,7 @@
 
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-2 cards__top">
                     <div class="cards__img">
@@ -44,7 +44,7 @@
 
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-2 cards__top">
                     <div class="cards__img">
