--- a/src/blocks/modules/home-1/home-1.html
+++ b/src/blocks/modules/home-1/home-1.html
@@ -8,7 +8,7 @@
 
         <div class="row cards__slider">
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-1 cards__top">
                     <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
@@ -22,7 +22,7 @@
 
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-1 cards__top">
                     <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
@@ -36,7 +36,7 @@
 
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-1 cards__top">
                     <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
