--- a/src/blocks/modules/home-3/home-3.html
+++ b/src/blocks/modules/home-3/home-3.html
@@ -12,7 +12,7 @@
 
         <div class="row cards__slider">
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-2 cards__top">
                     <div class="cards__img">
@@ -32,7 +32,7 @@
 
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-2 cards__top">
                     <div class="cards__img">
@@ -52,7 +52,7 @@
 
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="cards__item cards-2 cards__top">
                     <div class="cards__img">
