Clinic: added blocks News and Licenses

--- a/src/blocks/modules/home-7/home-7.html
+++ b/src/blocks/modules/home-7/home-7.html
@@ -5,7 +5,7 @@
 
                 <div class="title-1 color-red">Задайте вопрос или запишитесь</div>
 
-                <form class="needs-validation" novalidate>
+                <form>
                     <div class="row">
                         <div class="col-md-6 col-xl-4 mb-4">
                             <label class="form-label" for="home7Name">Введите Ваше имя:</label>
