--- a/src/blocks/modules/team/team.html
+++ b/src/blocks/modules/team/team.html
@@ -18,7 +18,7 @@
                                 Записаться на прием
                             </div>
 
-                            <form class="needs-validation" novalidate>
+                            <form>
                                 <div class="form-row">
                                     <div class="col-12 mb-4">
                                         <label class="form-label" for="teamAppointmentName-1">Введите Ваше имя:</label>
@@ -151,7 +151,7 @@
                                 Записаться на прием
                             </div>
 
-                            <form class="needs-validation" novalidate>
+                            <form>
                                 <div class="form-row">
                                     <div class="col-12 mb-4">
                                         <label class="form-label" for="teamAppointmentName-2">Введите Ваше имя:</label>
