Clinic: added block Guarantees Table

--- a/src/blocks/modules/guarantees/guarantees.html
+++ b/src/blocks/modules/guarantees/guarantees.html
@@ -113,7 +113,7 @@
             Тем не менее в случаях, когда ввиду специфики отдельных видов работ не возможно определить конкретные
             гарантийные сроки и сроки службы, мы гарантируем следующее
         </p>
-        
+
         <div class="row">
 
             <div class="col-md-6 order-md-1 mb-3">
@@ -155,6 +155,8 @@
 
     </div>
     <!-- /.container-small -->
+
+    @@include("../guarantees-table/guarantees-table.html")
 
 </div>
 <!-- /.guarantees -->
