Clinic: added mobile version

--- a/src/blocks/modules/breadcrumbs/breadcrumbs-clinic.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs-clinic.html
@@ -4,16 +4,16 @@
             <li class="breadcrumbs__list_item">
                 <a href="#" class="breadcrumbs__list_item_link active">Наши работы</a>
             </li>
-            <li class="breadcrumbs__item">
+            <li class="breadcrumbs__list_item">
                 <a href="#" class="breadcrumbs__list_item_link">Отзывы</a>
             </li>
-            <li class="breadcrumbs__item">
+            <li class="breadcrumbs__list_item">
                 <a href="#" class="breadcrumbs__list_item_link">Новости, новинки, статьи</a>
             </li>
-            <li class="breadcrumbs__item">
+            <li class="breadcrumbs__list_item">
                 <a href="#" class="breadcrumbs__list_item_link">Лицензии и сертификаты</a>
             </li>
-            <li class="breadcrumbs__item">
+            <li class="breadcrumbs__list_item">
                 <a href="#" class="breadcrumbs__list_item_link">Гарантии</a>
             </li>
         </ul>
