--- a/src/blocks/modules/guarantees/guarantees.html
+++ b/src/blocks/modules/guarantees/guarantees.html
@@ -148,7 +148,10 @@
                         Мы  также  гарантируем  бесплатное  устранение   возможных  осложнений  в послеоперационный период:
                     </span>
                 </p>
-                <p>-  воспаление; -  кровотечение; -  отек; -  боль.</p>
+                <p>-  воспаление;</p>
+                <p>-  кровотечение;</p>
+                <p>-  отек;</p>
+                <p>-  боль.</p>
             </div>
 
         </div>
