Services: added mobile version

--- a/src/blocks/modules/services-12/services-12.html
+++ b/src/blocks/modules/services-12/services-12.html
@@ -1,6 +1,6 @@
 <div class="services-12">
 
-    <div class="container-small">
+    <div class="container-small pl-0 pr-0 pl-md-3 pr-md-3">
         <div class="d-flex align-items-center justify-content-between">
             <div class="title-block title-1 bg-red color-white">Прайс-лист</div>
             <a href="#" class="services-12__btn">Смотреть полный прайс-лист</a>
@@ -18,10 +18,10 @@
                             <div class="title-3 color-white bold">Услуга</div>
                         </div>
                         <div class="col-md-2">
-                            <div class="services-12__table_desktop title-3 color-white bold">Стоимость</div>
+                            <div class="title-3 color-white bold">Стоимость</div>
                         </div>
                         <div class="col-md-2">
-                            <div class="services-12__table_desktop title-3 color-white bold text-center">Кол-во</div>
+                            <div class="title-3 color-white bold text-center">Кол-во</div>
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,10 @@
                                 </div>
                                 <div class="services-12__table_mobile col-6 col-md-2 color-grey">Стоимость</div>
                                 <div class="services-12__table_mobile col-6 col-md-2 color-grey">Кол-во</div>
-                                <div class="col-6 col-md-2 d-flex align-items-center bold">24 000 - 28 000 ₽</div>
+                                <div class="col-6 col-md-2 d-flex align-items-center flex-wrap bold">
+                                    <span>24 000 -</span>
+                                    <span>28 000 ₽</span>
+                                </div>
                                 <div class="col-6 col-md-2 d-flex align-items-center"><div class="counter"></div></div>
                             </div>
                         </div>
@@ -162,8 +165,6 @@
                         <div class="container-small">
                             <div class="row">
                                 <div class="col-md-8 d-flex align-items-center"></div>
-                                <div class="services-12__table_mobile col-6 col-md-2 color-grey">Стоимость</div>
-                                <div class="services-12__table_mobile col-6 col-md-2 color-grey">Кол-во</div>
                                 <div class="col-6 col-md-2 d-flex align-items-center bold">Итого</div>
                                 <div class="col-6 col-md-2 d-flex align-items-center">
                                     <div class="services-12__table_total">31 350 ₽</div>
@@ -175,6 +176,10 @@
             </div>
         </div>
         <!-- /.services-12__table -->
+
+        <div class="services-12__table_mobile text-center mt-4">
+            <a href="#" class="link link-red color-red">Смотреть полный прайс-лист</a>
+        </div>
 
     </div>
     <!-- /.container -->
