--- a/src/blocks/modules/services-4/services-4.html
+++ b/src/blocks/modules/services-4/services-4.html
@@ -1,7 +1,7 @@
 <div class="services-4">
 
     <div class="container-small">
-        <div class="d-flex align-items-center justify-content-between">
+        <div class="block-important">
             <div class="title-block title-1 bg-red color-white">Вкладка</div>
             <a href="#" class="important">
                 <span class="important__text link link-red color-red">Важно знать</span>
