--- a/src/blocks/modules/services-1/services-1.html
+++ b/src/blocks/modules/services-1/services-1.html
@@ -1,7 +1,7 @@
 <div class="services-1">
     <div class="container-small">
 
-        <div class="d-flex align-items-center justify-content-between">
+        <div class="block-important">
             <div class="title-block title-1 bg-blue color-white">Эстетические реставрации</div>
             <a href="#" class="important">
                 <span class="important__text link link-blue">Важно знать</span>
