--- a/src/blocks/modules/services-8/services-8.html
+++ b/src/blocks/modules/services-8/services-8.html
@@ -3,7 +3,7 @@
 
         <div class="block-important">
             <div class="title-block title-1 bg-blue color-white">Керамические виниры</div>
-            <a href="#" class="important">
+            <a href="#" class="important" data-toggle="modal" data-target=".modal-important-3">
                 <span class="important__text link link-blue">Важно знать</span>
                 <span class="important__icon title-1 bg-blue important-blue">!</span>
             </a>
