--- a/src/blocks/modules/services-4/services-4.html
+++ b/src/blocks/modules/services-4/services-4.html
@@ -3,7 +3,7 @@
     <div class="container-small">
         <div class="block-important">
             <div class="title-block title-1 bg-red color-white">Вкладка</div>
-            <a href="#" class="important">
+            <a href="#" class="important" data-toggle="modal" data-target=".modal-important-2">
                 <span class="important__text link link-red color-red">Важно знать</span>
                 <span class="important__icon title-1 bg-red important-red">!</span>
             </a>
