Added anchor link

--- a/src/blocks/modules/breadcrumbs/breadcrumbs-clinic.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs-clinic.html
@@ -2,19 +2,19 @@
     <div class="container-fluid">
         <ul class="breadcrumbs__list">
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link active">Наши работы</a>
+                <a href="#works" class="breadcrumbs__list_item_link">Наши работы</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Отзывы</a>
+                <a href="#reviews" class="breadcrumbs__list_item_link">Отзывы</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Новости, новинки, статьи</a>
+                <a href="#news" class="breadcrumbs__list_item_link">Новости, новинки, статьи</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Лицензии и сертификаты</a>
+                <a href="#licenses" class="breadcrumbs__list_item_link">Лицензии и сертификаты</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Гарантии</a>
+                <a href="#guarantees" class="breadcrumbs__list_item_link">Гарантии</a>
             </li>
         </ul>
     </div>
