--- a/src/blocks/modules/breadcrumbs/breadcrumbs-home.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs-home.html
@@ -2,16 +2,16 @@
     <div class="container-fluid">
         <ul class="breadcrumbs__list">
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link active">2 шага к здоровым зубам</a>
+                <a href="#home-2" class="breadcrumbs__list_item_link">2 шага к здоровым зубам</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Наша команда</a>
+                <a href="#team" class="breadcrumbs__list_item_link">Наша команда</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Сколько стоит</a>
+                <a href="#home-4" class="breadcrumbs__list_item_link">Сколько стоит</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Лечить сейчас, платить завтра</a>
+                <a href="#home-5" class="breadcrumbs__list_item_link">Лечить сейчас, платить завтра</a>
             </li>
         </ul>
     </div>
