--- a/src/blocks/modules/breadcrumbs/breadcrumbs-services.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs-services.html
@@ -2,13 +2,13 @@
     <div class="container-fluid">
         <ul class="breadcrumbs__list">
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link active">Эстетические реставрации</a>
+                <a href="#services-1" class="breadcrumbs__list_item_link">Эстетические реставрации</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Вкладка</a>
+                <a href="#services-4" class="breadcrumbs__list_item_link">Вкладка</a>
             </li>
             <li class="breadcrumbs__list_item">
-                <a href="#" class="breadcrumbs__list_item_link">Керамические виниры</a>
+                <a href="#services-8" class="breadcrumbs__list_item_link">Керамические виниры</a>
             </li>
         </ul>
     </div>
