--- a/src/blocks/modules/licenses/licenses.html
+++ b/src/blocks/modules/licenses/licenses.html
@@ -1,4 +1,4 @@
-<div class="licenses">
+<div class="licenses" id="licenses">
     <div class="container-small">
 
         <div class="title-block title-1 bg-red color-white">Лицензии, сертификаты</div>
