--- a/src/blocks/modules/services-1/services-1.html
+++ b/src/blocks/modules/services-1/services-1.html
@@ -1,4 +1,4 @@
-<div class="services-1">
+<div class="services-1" id="services-1">
     <div class="container-small">
 
         <div class="block-important">
