--- a/src/blocks/modules/services-4/services-4.html
+++ b/src/blocks/modules/services-4/services-4.html
@@ -1,4 +1,4 @@
-<div class="services-4">
+<div class="services-4" id="services-4">
 
     <div class="container-small">
         <div class="block-important">
