--- a/src/blocks/modules/services-8/services-8.html
+++ b/src/blocks/modules/services-8/services-8.html
@@ -1,4 +1,4 @@
-<div class="services-8">
+<div class="services-8" id="services-8">
     <div class="container-small">
 
         <div class="block-important">
