--- a/src/blocks/modules/works/works.html
+++ b/src/blocks/modules/works/works.html
@@ -1,4 +1,4 @@
-<div class="works">
+<div class="works" id="works">
     <div class="container-small">
 
         <div class="title-block bg-blue title-1 color-white">Наши работы</div>
