--- a/src/blocks/modules/reviews/reviews.html
+++ b/src/blocks/modules/reviews/reviews.html
@@ -1,4 +1,4 @@
-<div class="reviews">
+<div class="reviews" id="reviews">
     <div class="container-small">
 
         <div class="title-block title-1 color-white bg-red">Отзывы</div>
