--- a/src/blocks/modules/breadcrumbs/breadcrumbs-home.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs-home.html
@@ -1,20 +1,17 @@
 <div class="breadcrumbs">
-    <div class="container-fluid">
-        <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__list_item">
-                <a href="#home-2" class="breadcrumbs__list_item_link">2 шага к здоровым зубам</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#team" class="breadcrumbs__list_item_link">Наша команда</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#home-4" class="breadcrumbs__list_item_link">Сколько стоит</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#home-5" class="breadcrumbs__list_item_link">Лечить сейчас, платить завтра</a>
-            </li>
-        </ul>
-    </div>
-    <!-- /.container-fluid -->
+    <ul class="breadcrumbs__list">
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#home-2">2 шага к здоровым зубам</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#team">Наша команда</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#home-4">Сколько стоит</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#home-5">Лечить сейчас, платить завтра</a>
+        </li>
+    </ul>
 </div>
 <!-- /.breadcrumbs -->
