--- a/src/blocks/modules/header/header-services.html
+++ b/src/blocks/modules/header/header-services.html
@@ -17,6 +17,8 @@
         </div>
         <!-- /.header__box -->
 
+        @@include("../breadcrumbs/breadcrumbs-services.html")
+
     </div>
     <!-- /.container-fluid -->
 </header>
